# ExpenseTrackerApi

./: README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
instance/: expense_tracker.db
models/: category.py  expense.py  user.py
routes/: __init__.py  auth.py  category.py  expense.py
